# TDT

./: .gitignore  12-mer.json  12-mer.pkl  13-mer.pkl  CMakeLists.txt  README.md  main.cpp
benchmark/: generate_test_data.ipynb
compressor/: bucket_index.hpp  dataset.py  escherichia.pkl  index.py  signature.py  test.ipynb  test.py  utils.py  vectorization.py
gtdb_utils/: escherichia.csv  metadata.ipynb  pseudomonas.csv
ncbi_utils/: README.md  database_download.sh
tools/: README.md
